--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy Next.js to GitHub Pages
 
 on:
   push:
@@ -10,10 +10,6 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,17 +20,20 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'  # ← CAMBIADO DE 18 A 20
-          cache: 'npm'
+          node-version: '20.x'
           
       - name: Install dependencies
         run: npm ci
       
-      - name: Build
-        run: npm run build
-        
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
+      - name: Build with Next.js
+        run: |
+          echo "Creating next.config.mjs if it doesn't exist..."
+          if [ ! -f next.config.mjs ]; then
+            echo 'export default { output: "export", images: { unoptimized: true } }' > next.config.mjs
+          fi
+          npm run build
+          echo "Build completed. Listing out directory:"
+          ls -la out/
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
@@ -50,4 +49,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v3
