--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,52 +1,28 @@
-name: Deploy Next.js to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches: [main]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '20'
           
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
+      - run: npm run build
       
-      - name: Build with Next.js
-        run: |
-          echo "Creating next.config.mjs if it doesn't exist..."
-          if [ ! -f next.config.mjs ]; then
-            echo 'export default { output: "export", images: { unoptimized: true } }' > next.config.mjs
-          fi
-          npm run build
-          echo "Build completed. Listing out directory:"
-          ls -la out/
-        
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Add .nojekyll file
+        run: touch out/.nojekyll
+      
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: ./out
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./out
